# pytronikon

./: .gitignore  LICENSE  README.md  ac1cat.json  pyproject.toml
notes/: elektronikon-mkv-protocol.md
src/pytronikon/: __init__.py  catalog.py  cli.py  client.py  codec.py  errors.py  protocol.py
tests/: conftest.py  test_catalog_decode.py  test_catalog_discover_live_selectors.py  test_client.py  test_codec.py  test_protocol.py
tests/integration/: __init__.py  test_cli_integration.py  test_client_integration.py
